--- a/index.html
+++ b/index.html
@@ -185,14 +185,30 @@
         <div class="txt2">
             <h2>Parceiros</h2>
             <h4>Lorem ipsum dolor sit amet consectetur</h4>
-            <button class="confirmar">confirmar</button>
+            <button class="confirmar">confira</button>
         </div>
         <div class="txt3">
             <h2>Parceiros</h2>
             <h4>Lorem ipsum dolor sit amet consectetur </h4>
-            <button class="confirmar">confirmar</button>
+            <button class="confirmar">confira</button>
         </div>
     </section>
     
+    <h3 class="titu2">Produtos relacionados</h3>
+    <h5 class="vertodos">ver todos</h5>
+
+        
+    <section class="produtos">
+        <div class="txt4">
+            <h2>Produtos</h2>
+            <h4>Lorem ipsum dolor sit amet consectetur</h4>
+            <button class="confirmar">confira</button>
+        </div>
+        <div class="txt5">
+            <h2>Produtos</h2>
+            <h4>Lorem ipsum dolor sit amet consectetur </h4>
+            <button class="confirmar">confira</button>
+        </div>
+    </section>
 </body>
 </html>
