--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 </h6>
                 <h6>ver mais detalhes do produto  ></h6>
                 <input type="number" name="" id="">
-                <button class="comprarmodal">comprar</button>
+                <div><button class="comprarmodal">comprar</button></div>
                 </div>
             </div>
         </div>
