--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>clonando site</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media-query.css">
+    <link rel="shortcut icon" href="./img/logovtex.svg" type="image/x-icon">
     <i class="bi bi-facebook"></i>
     <i class="bi bi-box-arrow-left"></i>
 </head>
