--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <header class="cabecalho">
 
-        <img src="./img/logovtex.svg" alt="" srcset="">
+        <img src="./img/logovtex.svg" alt="logo-vtex" srcset="">
         <input type="search" name="pesquisar" id="pesquisar"placeholder="oque voçe esta buscando? " > <img class="lupa" src="./img/lupapesquisa.svg" alt="">
         <li><a href="#"><i class="caixa de entrada"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-left" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="M6 12.5a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-8a.5.5 0 0 0-.5.5v2a.5.5 0 0 1-1 0v-2A1.5 1.5 0 0 1 6.5 2h8A1.5 1.5 0 0 1 16 3.5v9a1.5 1.5 0 0 1-1.5 1.5h-8A1.5 1.5 0 0 1 5 12.5v-2a.5.5 0 0 1 1 0v2z"/>
